--- a/librechat.example.yaml
+++ b/librechat.example.yaml
@@ -86,55 +86,19 @@ endpoints:
       modelDisplayLabel: 'groq'
 
     # Mistral AI Example
-    - name: 'Mistral' # Unique name for the endpoint
-      # For `apiKey` and `baseURL`, you can use environment variables that you define.
-      # recommended environment variables:
+    - name: 'Mistral'
       apiKey: '${MISTRAL_API_KEY}'
       baseURL: 'https://api.mistral.ai/v1'
-
-      # Models configuration
       models:
-        # List of default models to use. At least one value is required.
         default: ['mistral-tiny', 'mistral-small', 'mistral-medium']
-        # Fetch option: Set to true to fetch models from API.
-        fetch: true # Defaults to false.
-
-      # Optional configurations
-
-      # Title Conversation setting
-      titleConvo: true # Set to true to enable title conversation
-
-      # Title Method: Choose between "completion" or "functions".
-      # titleMethod: "completion"  # Defaults to "completion" if omitted.
-
-      # Title Model: Specify the model to use for titles.
-      titleModel: 'mistral-tiny' # Defaults to "gpt-3.5-turbo" if omitted.
-
-      # Summarize setting: Set to true to enable summarization.
-      # summarize: false
-
-      # Summary Model: Specify the model to use if summarization is enabled.
-      # summaryModel: "mistral-tiny"  # Defaults to "gpt-3.5-turbo" if omitted.
-
-      # Force Prompt setting: If true, sends a `prompt` parameter instead of `messages`.
-      # forcePrompt: false
-
-      # The label displayed for the AI model in messages.
-      modelDisplayLabel: 'Mistral' # Default is "AI" when not set.
-
-      # Add additional parameters to the request. Default params will be overwritten.
-      # addParams:
-      # safe_prompt: true # This field is specific to Mistral AI: https://docs.mistral.ai/api/
-
-      # Drop Default params parameters from the request. See default params in guide linked below.
-      # NOTE: For Mistral, it is necessary to drop the following parameters or you will encounter a 422 Error:
+        fetch: true
+      titleConvo: true
+      titleModel: 'mistral-tiny'
+      modelDisplayLabel: 'Mistral'
       dropParams: ['stop', 'user', 'frequency_penalty', 'presence_penalty']
 
     # OpenRouter Example
     - name: 'OpenRouter'
-      # For `apiKey` and `baseURL`, you can use environment variables that you define.
-      # recommended environment variables:
-      # Known issue: you should not use `OPENROUTER_API_KEY` as it will then override the `openAI` endpoint to use OpenRouter as well.
       apiKey: '${OPENROUTER_KEY}'
       baseURL: 'https://openrouter.ai/api/v1'
       models:
@@ -142,9 +106,36 @@ endpoints:
         fetch: true
       titleConvo: true
       titleModel: 'meta-llama/llama-3-70b-instruct'
-      # Recommended: Drop the stop parameter from the request as Openrouter models use a variety of stop tokens.
       dropParams: ['stop']
       modelDisplayLabel: 'OpenRouter'
+
+    # OpenAI 端点配置
+    - name: 'OpenAI'
+      apiKey: '${OPENAI_API_KEY}'
+      baseURL: 'https://api.openai.com/v1'
+      models:
+        default: [
+          'gpt-4o-mini-2024-07-18',
+          'llama-3.1-70b-versatile',
+          'deepseek-chat',
+          'abab6.5s-chat',
+          'SparkDesk-v3.5',
+          'gpt-4o-2024-05-13',
+          'command-r-plus',
+          'doubao-pro-128k',
+          'doubao-pro-32k',
+          'doubao-pro-4k',
+          'ERNIE-Speed-8K',
+          'ERNIE-Speed-128K',
+          'gemini-1.5-pro',
+          'claude-3-opus-20240229',
+          'claude-3-5-sonnet-20240620'
+        ]
+        fetch: false
+      titleConvo: true
+      titleModel: 'gpt-4o-mini-2024-07-18'
+      modelDisplayLabel: 'OpenAI'
+
 # fileConfig:
 #   endpoints:
 #     assistants:
