--- a/librechat.example.yaml
+++ b/librechat.example.yaml
@@ -19,7 +19,7 @@ endpoints:
     # Anyscale
     - name: "rick"
       apiKey: "user_provided"
-      baseURL: 'https://one.poplink.us.kg/v1'
+      baseURL: 'https://api.syferie.tech//v1'
       models:
         default: [
           'gpt-4o-mini-2024-07-18',
