--- a/librechat.example.yaml
+++ b/librechat.example.yaml
@@ -415,15 +415,11 @@ endpoints:
       baseURL: "https://api.groq.com/openai/v1/"
       models:
         default: [
-          "llama2-70b-4096",
-          "llama3-70b-8192",
-          "llama3-8b-8192",
-          "mixtral-8x7b-32768",
-          "gemma-7b-it",
+          "llama-3.1-70b-versatile",
           ]
         fetch: false
       titleConvo: true
-      titleModel: "mixtral-8x7b-32768"
+      titleModel: "llama-3.1-70b-versatile"
       modelDisplayLabel: "groq"
       
     # Mistral AI API
